--- a/rate-repository-app/package.json
+++ b/rate-repository-app/package.json
@@ -26,7 +26,8 @@
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.22.3",
     "yup": "^1.4.0",
-    "expo-linking": "~6.2.2"
+    "expo-linking": "~6.2.2",
+    "@react-native-picker/picker": "2.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
