--- a/rate-repository-app/package.json
+++ b/rate-repository-app/package.json
@@ -15,8 +15,10 @@
     "@expo/metro-config": "^0.17.4",
     "@expo/metro-runtime": "~3.1.1",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-picker/picker": "2.6.1",
     "dotenv": "^16.4.5",
     "expo": "~50.0.14",
+    "expo-linking": "~6.2.2",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.5",
     "graphql": "^15.8.0",
@@ -25,9 +27,8 @@
     "react-native": "0.73.6",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.22.3",
-    "yup": "^1.4.0",
-    "expo-linking": "~6.2.2",
-    "@react-native-picker/picker": "2.6.1"
+    "use-debounce": "^10.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
